# OpenGLRawgen

./: .gitignore  .gitmodules  .travis.yml  LICENSE  NewDesign.txt  OpenGLRawgen  OpenGLRawgen.cabal  OpenGLRawgen.lkshf  README.md  TODO.md  Todo.md  depsinstall.sh  downloadSpec.sh  enumext.spec  gl.spec  mkreference.sh  notes  novendor  reuseenums  reusefuncs  testbuild.sh  testrun.sh
BuildSources/: BUILDING.md  Building  Extensions.hs  GetProcAddress.hs  OpenGLRawTest.cabal  Types.hs  TypesInternal.hs
BuildSources/include/: CTypes.h
input/: ReintroductionDifference  enumDeprecations  enumext.spec  functionDeprecations  gl.spec  gl.tm  novendor  reuseenums  reusefuncs  warningfile
referenceoutput/: modulesE.txt
referenceoutput/Graphics/Rendering/OpenGL/: Raw.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/: AMD.hs  APPLE.hs  ARB.hs  ATI.hs  EXT.hs  KHR.hs  NV.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/AMD/: BlendMinmaxFactor.hs  DebugOutput.hs  DepthClampSeparate.hs  DrawBuffersBlend.hs  MultiDrawIndirect.hs  NameGenDelete.hs  PerformanceMonitor.hs  PinnedMemory.hs  QueryBufferObject.hs  SamplePositions.hs  SparseTexture.hs  StencilOperationExtended.hs  VertexShaderTesselator.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/APPLE/: AuxDepthStencil.hs  ClientStorage.hs  ElementArray.hs  Fence.hs  FloatPixels.hs  FlushBufferRange.hs  ObjectPurgeable.hs  Rgb422.hs  RowBytes.hs  TextureRange.hs  VertexArrayRange.hs  VertexProgramEvaluators.hs  Ycbcr422.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/ARB/: BlendFuncExtended.hs  ClEvent.hs  ClearBufferObject.hs  ColorBufferFloat.hs  Compatibility.hs  CompressedTexturePixelStorage.hs  CopyBuffer.hs  DebugOutput.hs  DepthBufferFloat.hs  DepthTexture.hs  DrawBuffers.hs  DrawBuffersBlend.hs  DrawElementsBaseVertex.hs  DrawInstanced.hs  ES2Compatibility.hs  ES3Compatibility.hs  FragmentProgram.hs  FragmentShader.hs  FramebufferObject.hs  FramebufferSRGB.hs  GeometryShader4.hs  GetProgramBinary.hs  GpuShader5.hs  GpuShaderFp64.hs  HalfFloatPixel.hs  Imaging.hs  InstancedArrays.hs  InternalformatQuery2.hs  MapBufferRange.hs  MatrixPalette.hs  Multisample.hs  Multitexture.hs  OcclusionQuery.hs  PixelBufferObject.hs  PointParameters.hs  PointSprite.hs  ProvokingVertex.hs  Robustness.hs  SampleShading.hs  SamplerObjects.hs  (+42 more)
referenceoutput/Graphics/Rendering/OpenGL/Raw/ATI/: DrawBuffers.hs  ElementArray.hs  EnvmapBumpmap.hs  FragmentShader.hs  MapObjectBuffer.hs  Meminfo.hs  PixelFormatFloat.hs  PnTriangles.hs  SeparateStencil.hs  TextureFloat.hs  TextureMirrorOnce.hs  VertexArrayObject.hs  VertexAttribArrayObject.hs  VertexStreams.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/Core/: Core11.hs  Core12.hs  Core13.hs  Core14.hs  Core15.hs  Core20.hs  Core21.hs  Core30.hs  Core31.hs  Core31Compatibility.hs  Core32.hs  Core32Compatibility.hs  Core33.hs  Core33Compatibility.hs  Core40.hs  Core40Compatibility.hs  Core41.hs  Core41Compatibility.hs  Core42.hs  Core42Compatibility.hs  Core43.hs  Core43Compatibility.hs
referenceoutput/Graphics/Rendering/OpenGL/Raw/EXT/: Abgr.hs  Bgra.hs  BindableUniform.hs  BlendColor.hs  BlendEquationSeparate.hs  BlendFuncSeparate.hs  BlendMinmax.hs  BlendSubtract.hs  ClipVolumeHint.hs  Cmyka.hs  ColorSubtable.hs  CompiledVertexArray.hs  Convolution.hs  CoordinateFrame.hs  DepthBoundsTest.hs  DirectStateAccess.hs  DrawBuffers2.hs  DrawInstanced.hs  DrawRangeElements.hs  FogCoord.hs  FourTwoTwoPixels.hs  FramebufferBlit.hs  FramebufferMultisample.hs  FramebufferObject.hs  FramebufferSRGB.hs  GeometryShader4.hs  GpuShader4.hs  Histogram.hs  IndexArrayFormats.hs  IndexFunc.hs  IndexMaterial.hs  LightTexture.hs  Multisample.hs  PackedDepthStencil.hs  PackedFloat.hs  PackedPixels.hs  PalettedTexture.hs  PixelBufferObject.hs  PixelTransform.hs  (+37 more)
referenceoutput/normal/: modulesE.txt
referenceoutput/striped/: modulesE.txt
src/: EnumSpec.hs  FuncSpec.hs  Main.hs  Spec.hs
src/Code/: Builder.hs  Compatibility.hs  Enum.hs  GroupModule.hs  Module.hs  ModuleCode.hs  ModuleLocation.hs  ModuleNames.hs  PostProcessing.hs  Raw.hs  RawFunc.hs  Types.hs
src/Code/New/: Builder.hs  Module.hs  Raw.hs
src/EnumSpec/: Parsing.hs  Processing.hs  Types.hs
src/FuncSpec/: Parsing.hs  Types.hs
src/Interface/: Module.hs
src/Main/: Monad.hs  Options.hs
src/Modules/: Builder.hs  Compatibility.hs  GroupModule.hs  Module.hs  ModuleNames.hs  Raw.hs  Types.hs
src/Spec/: Base.hs  DefineMap.hs  LocationMap.hs  Lookup.hs  Parsing.hs  Processing.hs  RawSpec.hs  ValueMap.hs
(+531 files in other folders)
