name: OpenGLRawgen
version: 0.3.0
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Lars Corbijn 2011-2013
maintainer: Lars Corbijn
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
 
executable OpenGLRawgen
  main-is: Main.hs
  buildable: True
  hs-source-dirs: src
  other-modules:
    Spec
    Spec.DefineMap
    Spec.Processing
    Spec.Parsing
    Spec.RawSpec
    Spec.ValueMap
    Main.Options
    Main.Monad
    Modules.Builder
    Modules.Compatibility
    Modules.GroupModule
    Modules.Module
    Modules.ModuleNames
    Modules.Raw
    Modules.Types
    Code.ModuleCode
    Code.PostProcessing
  build-depends:
    CodeGenerating >=0.1.0 && <0.3.0,
    base >=4,
    containers -any,
    directory -any,
    filepath -any,
    haskell-src-exts -any,
    mtl -any,
    opengl-api -any,
    parsec -any,
    OpenGLRawgenBase,
    OpenGLRawInterface
  ghc-options: -Wall -O2 -rtsopts
